# QuadProg

./: .gitignore  API-doc-FORD-file.md  CMakeLists.txt  README.md  fpm.toml  index.html  modules.json  project-file.md  search.html
example/: CMakeLists.txt
example/compact_mpc/: CMakeLists.txt  example_compact_mpc.f90  main.f90  mpc_plots.py
example/markowitz/: CMakeLists.txt  example_markowitz.f90  main.f90  plot_markowitz.py
example/mpc/: CMakeLists.txt  example_mpc.f90  main.f90
test/: CMakeLists.txt  benchmark_problems.f90  check.f90  lstsq_variants.f90  problems.f90  quadprog_benchmark.f90
test/benchmark_problems/: CMakeLists.txt  fort.0  test_benchmark_problems.f90
test/data/: README.md
test/data/DUAL1/: C_matrix.npy  P_matrix.npy  d_vector.npy
test/data/DUAL2/: P_matrix.npy  d_vector.npy  q_vector.npy
test/data/DUAL3/: A_matrix.npy  C_matrix.npy  P_matrix.npy  q_vector.npy
test/data/DUAL4/: A_matrix.npy  P_matrix.npy  d_vector.npy
test/data/DUALC1/: A_matrix.npy  P_matrix.npy  d_vector.npy
test/data/DUALC5/: C_matrix.npy  P_matrix.npy  d_vector.npy  q_vector.npy
test/data/HS118/: P_matrix.npy  d_vector.npy  q_vector.npy
test/data/HS21/: C_matrix.npy  P_matrix.npy  d_vector.npy
test/data/HS268/: P_matrix.npy
test/data/HS35/: C_matrix.npy  d_vector.npy
test/data/HS35MOD/: A_matrix.npy  C_matrix.npy  P_matrix.npy  q_vector.npy
test/data/HS76/: C_matrix.npy  q_vector.npy
test/data/KSIP/: C_matrix.npy  P_matrix.npy  d_vector.npy  q_vector.npy
test/data/LASER/: d_vector.npy  q_vector.npy
test/data/MOSARQP2/: d_vector.npy  q_vector.npy
test/data/QPCBLEND/: C_matrix.npy  P_matrix.npy  b_vector.npy  q_vector.npy
test/data/QPCBOEI1/: A_matrix.npy  q_vector.npy
test/data/QPCBOEI2/: C_matrix.npy  P_matrix.npy  d_vector.npy
test/lstsq_variants/: CMakeLists.txt  test_lstsq_variants.f90
test/simple_problems/: CMakeLists.txt  test_simple_problems.f90
(+87 files in other folders)
